<resources>
    <string name="app_name">Car memorize</string>

    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="station">Station</string>
    <string name="gas">Type of Gas</string>
    <string name="mileage">Mileage</string>
    <string name="volume">Volume</string>
    <string name="nett">Net Price</string>
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="alert">Alert</string>
    <string name="on">On</string>
    <string name="note">Note</string>
    <string name="name">Name</string>
    <string name="bbr">Break System</string>
    <string name="week">Week</string>
    <string name="mileage_">Next Mileage</string>
    <string name="exp">Expiration Date</string>
    <string name="p_tag">Price of Tax</string>
    <string name="Brand">Brand</string>
    <string name="Model">Model</string>
    <string name="License_car">License_car</string>
    <string name="Yearsofbuy">Years of buy</string>
    <string name="Coler">Coler</string>
    <string name="nbreaks">\breaks</string>
    <string name="nTire">Tire</string>
    <string name="noilchange">Oil Change</string>
    <string name="nradiater">Radiater</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="energy">Energy</string>
    <string name="tax">Tax</string>
    <string name="servicr">service</string>
    <string name="liter">Liter</string>
    <string name="netprice">Net Price</string>
    <string name="baht">Baht</string>
    <string name="oilch">Oil Change</string>
    <string name="kilometer">Kilometer</string>
    <string name="nextMil">Next   Mileage</string>
    <string name="comment">Comment</string>


    <string name="color_prompt">Color</string>
    <string-array name="color_arrays">
        <item>Red</item>
        <item>Bule States</item>
        <item>White</item>
        <item>Black</item>
        <item>Pink</item>
        <item>Green</item>
        <item>Orange</item>
    </string-array>

    <string name="type_gass_prompt">Type Gass</string>
    <string-array name="type_gass_arrays">
        <item>LNG</item>
        <item>CNG States</item>
        <item>LPG</item>
    </string-array>

    <string name="type_liter_prompt">Liters.</string>
    <string-array name="liter_arrays">
        <item>Liter</item>
        <item>Mililite</item>
    </string-array>

    <string name="type_money_prompt">Bath.</string>
    <string-array name="bath_arrays">
        <item>Bath</item>
        <item>$</item>
        <item>Kim</item>
    </string-array>

    <!--toast-->
    <string name="toast_enter_car_name">Please enter your car name.</string>
    <string name="toast_enter_car_brand">Please enter your brand name.</string>
    <string name="toast_add_data_successfully">Add data successfully.</string>
    <string name="toast_edit_data_successfully">Edit data successfully.</string>

    <!--add my car-->
    <string name="text_add_my_car">Add My Car</string>
    <string name="text_edit_my_car">Edit My Car</string>
    <string name="Alert">Alert</string>
    <string name="Radiater">Radiater</string>
    <string name="bb">Break</string>
    <string name="breaksys">Break system</string>
    <string name="oilss">Oil Change</string>
    <string name="Kilometer">Kilometer</string>
    <string name="Volume">Volume</string>
    <string name="History">History</string>
    <string name="CarMemorize">Car Memorize</string>

</resources>
